Rebrand to Eggbator, add responsive design, and improve admin panel
- Rebranded from 'Inventory Management System' to 'Eggbator'
- Added fancy logo with gradient and egg icon
- Made entire app responsive with mobile menu
- Fixed admin sidebar visibility on desktop
- Added active menu item highlighting
- Updated email templates with Eggbator branding
- Added branding to PDF generation
- Consolidated all documentation into DOCUMENTATION.md
- Cleaned up unnecessary files and scripts
- Added Vercel deployment guide

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -34,3 +35,36 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# prisma
+/prisma/dev.db
+/prisma/dev.db-journal
+
+# setup and temporary files (consolidated into DOCUMENTATION.md)
+# Old documentation files removed
+
+# backup files
+.env.backup*
+*.backup
+
+# build artifacts
+*.tsbuildinfo
+
+# logs
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Firebase
+firestore.indexes.json
+firebase-debug.log
+firestore-debug.log
