--- a/package.json
+++ b/package.json
@@ -1,25 +1,44 @@
 {
-  "name": "uday-birthday-greeting",
+  "name": "inventory-management-system",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "create-admin": "ts-node scripts/create-admin.ts",
+    "test-firebase": "ts-node scripts/test-firebase-config.ts",
+    "fix-env": "node scripts/fix-env.js",
+    "test-email": "node scripts/test-email.js"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@hookform/resolvers": "^3.3.2",
+    "bcryptjs": "^2.4.3",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^13.6.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "next": "^16.1.1",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^7.0.7",
+    "qrcode": "^1.5.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.48.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.0"
+    "dotenv": "^17.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
-
